readString not available in older java, rewrite with workaround